--- a/app/src/main/res/layout/product_rv_item.xml
+++ b/app/src/main/res/layout/product_rv_item.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<soup.neumorphism.NeumorphCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/light_background"
-    android:layout_marginEnd="-5dp"
-    android:layout_marginStart="-5dp"
     android:paddingStart="15dp"
     android:paddingEnd="5dp"
-    android:paddingTop="@dimen/_10dp"
-    android:paddingBottom="5dp"
+    android:paddingVertical="5dp"
+    android:layout_margin="5dp"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="5dp"
     android:layout_marginBottom="1dp"
     app:elevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/wholeView"
         android:layout_width="180dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/g_card_background">
 
         <ImageView
             android:id="@+id/img_product"
@@ -204,4 +206,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</soup.neumorphism.NeumorphCardView>
+</androidx.cardview.widget.CardView>
